--- a/funnitest.html
+++ b/funnitest.html
@@ -15,8 +15,7 @@
 </head>
 <body>
 
-    <h1>Iframe Example</h1>
-    <iframe src="https://thebeta.duckdns.org/" title="Iframe Example"></iframe>
+    <iframe src="https://thebeta.duckdns.org/" title="about:blank"></iframe>
 
 </body>
 </html>
