--- a/funnitest.html
+++ b/funnitest.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iframe Example</title>
+    <title>about:blank</title>
     <style>
-        /* Optional: Add some styles to the iframe */
+        /* Reset body margin and padding */
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+        /* Style for the iframe */
         iframe {
             width: 100%;
             height: 100vh; /* Full height of the viewport */
