--- a/bypazz.html
+++ b/bypazz.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-    <iframe src="https://thebeta.duckdns.org/" title="about:blank"></iframe>
+    <iframe src="https://europe.worldwide.grupokarsten.com.mx/" title="about:blank"></iframe>
 
 </body>
 </html>
