--- a/Dinosaur Game.html
+++ b/Dinosaur Game.html
@@ -1,14 +1,15 @@
 <html>
 
 <head>
-<title>about:blank>
+<title>Google Classroom</title>
 <meta name="description" content="Dino Chrome">
 <meta property="og:title" content="Play Chrome Dino">
 <meta property="og:type" content="article">
 <meta property="og:url" content="http://www.thecodepost.org">
 <meta property="og:image" content="http://img.thecodepost.org/2015/01/trex.png">
 <meta property="og:site_name" content="The Code Post">
-<meta property="og:description" content="Dino Gaems">
+<meta property="og:description" content="Google Chrome Dino for all devices. Adapted by Elizalde Alexios">
+ <link rel="icon" href="https://ssl.gstatic.com/classroom/ic_product_classroom_32.png">
 
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 
