--- a/test.html
+++ b/test.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-    <iframe src="https://europe.worldwide.grupokarsten.com.mx/classes/math/hvtrs8%2F-fnizidy202.levlkf%7B.cpr%2F" title="about:blank"></iframe>
+    <iframe src="https://personal.denison.edu/~lalla/314f20/ladi/index.html" title="about:blank"></iframe>
 
 </body>
 </html>
