--- a/otherfile.html
+++ b/otherfile.html
@@ -21,6 +21,6 @@
   </head>
 		<center>
 			<p>Click <a href="https://github.com/skolltroll/Multi-Tool/raw/main/Bloons_Tower_Defense_3.swf">Here</a> to download the file and right click to go to fullscreen.</p>
-    	<embed src="cdn.jsdelivr.net/gh/skolltroll/Multi-Tool@raw/main/Bloons_Tower_Defense.swf"></embed>
+    	<embed src="btd3.swf"></embed>
 		</center>
   </body>
