--- a/test.html
+++ b/test.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-    <iframe src="https://saber.sabro.ro/" title="about:blank"></iframe>
+    <iframe src="https://studio.symphonic-music.com/" title="about:blank"></iframe>
 
 </body>
 </html>
