--- a/otherfile.html
+++ b/otherfile.html
@@ -1,26 +1,1 @@
-<!doctype html>
-<html>
-  <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
-  <link rel="shortcut icon" type="image/jpg" href="img/favicon.ico"/>
-	    <link href="https://fonts.googleapis.com/css2?family=Amaranth&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-  <body>
-		<header>
-			<img class="logo" src="img/logo2.png" alt="logo">
-   	  <h1>Welcome to the Flash Games Archive.</h1>
-      <nav>
-          <ul class="nav__links">
-						<button style="margin-right: 20px;" onclick="window.location.href='index.html'";">Home</button>
-							
-            <button onclick="window.location.href='info.html'";>Information</button>
-						
-          </nav>
-						</header>
-  <head>
-    <title>Bloons Tower Defense 3</title>
-  </head>
-		<center>
-			<p>Click <a href="https://github.com/skolltroll/Multi-Tool/raw/main/Bloons_Tower_Defense_3.swf">Here</a> to download the file and right click to go to fullscreen.</p>
-    	<embed src="btd3.swf"></embed>
-		</center>
-  </body>
+<!DOCTYPE html> <html> <head> <title>about:blank</title> <link rel="shortcut icon" href="https://www.google.com/favicon.ico" type="image/x-icon"> <style> html, body { margin: 0; padding: 0; } #iframe { display: block; width: 100%; height: 100vh; border: none; } </style> </head> <body> <iframe id="iframe" src="https://studio.symphonic-music.com"></iframe> </body> </html>
